# notebooklm-fleet-mcp

./: .cursorrules  .env.example  .gitignore  .mcpbignore  AGENTS.md  CHANGELOG.md  INSTALL.md  PRD.md  README.md  STATUS.md  glama.json  install-mcp.ps1  justfile  llms-full.txt  llms.txt  manifest.json  notebooklm-fleet-mcp-backend.spec  pyproject.toml  run_server.py  start.ps1
assets/prompts/: examples.json  system.md  user.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  CURSOR-MCP.md  DEVELOPMENT.md  FASTMCP_FEATURES.md  FLEET_INTEGRATION.md  README.md  TOOLS.md  TROUBLESHOOTING.md  WEBAPP.md
e2e/: health.spec.ts
native/: Cargo.toml  build.ps1  tauri.conf.json
native/capabilities/: default.json
native/src/: backend.rs
native/windows/: hooks.nsh
scripts/: cua-nsis-config.json
skills/notebooklm-fleet/: SKILL.md
src/notebooklm_fleet_mcp/: __init__.py  __main__.py  app.py  capabilities.py  config.py  fleet_pipelines.py  help_content.py  nlm_client.py  pipeline_liveness_service.py  server.py  startup_probe.py  tools_manifest.py
src/notebooklm_fleet_mcp/data/: fleet_default.json
tests/: test_api_health.py  test_fleet_pipelines.py  test_pipeline_liveness.py
web_sota/: index.html  package-lock.json  package.json  playwright.config.ts  start.ps1  tailwind.config.js  tsconfig.json  vite.config.ts
web_sota/src/: App.tsx  index.css
web_sota/src/api/: client.ts
web_sota/src/context/: LoggerContext.tsx
web_sota/src/lib/: use-zoom.ts
web_sota/src/pages/: ApiDocsPage.tsx  AppsPage.tsx  Dashboard.tsx  HelpPage.tsx  LogsPage.tsx  NotebooksPage.tsx  (+4 more)
(+6 files in other folders)
