[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notebooklm-fleet-mcp"
version = "0.1.0"
description = "FastMCP 3.2 fleet wrapper for NotebookLM — delegates to notebooklm-mcp-cli (nlm) with glass dashboard and fleet pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sandra Schieder" }]
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.urls]
Homepage = "https://github.com/sandraschi/notebooklm-fleet-mcp"
Repository = "https://github.com/sandraschi/notebooklm-fleet-mcp"
Issues = "https://github.com/sandraschi/notebooklm-fleet-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
notebooklm-fleet-mcp = "notebooklm_fleet_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["S101", "B008"]
